# mkl_random

./: .flake8  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AGENTS.md  CHANGELOG.md  README.md  genindex.html  how_to.html  index.html  meson.build  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorials.html
.github/: AGENTS.md  CODEOWNERS  copilot-instructions.md
.github/workflows/: build-docs.yml  build-with-clang.yml  build-with-standard-clang.yml  build_pip.yml  conda-package-cf.yml  conda-package.yml  pre-commit-autoupdate.yml  pre-commit.yml
_modules/: index.html
_sources/: how_to.rst.txt  index.rst.txt  tutorials.rst.txt
_sources/maintenance/: index.rst.txt
_sources/reference/: ars5.rst.txt  mcg31.rst.txt  mrg32k3a.rst.txt  mt2203.rst.txt  nondeterministic.rst.txt  philox4x32x10.rst.txt  r250.rst.txt  sfmt19937.rst.txt  wichmann_hill.rst.txt
_static/: documentation_options.js
conda-recipe/: AGENTS.md  bld.bat  build.sh  conda_build_config.yaml  meta.yaml
conda-recipe-cf/: AGENTS.md  bld.bat  build.sh  meta.yaml
docs/source/: conf.py  how_to.rst  index.rst  tutorials.rst
docs/source/maintenance/: index.rst
docs/source/reference/: api.rst  ars5.rst  index.rst  interfaces.rst  mcg31.rst  mcg59.rst  mrg32k3a.rst  mt19937.rst  mt2203.rst  nondeterministic.rst  patching.rst  philox4x32x10.rst  r250.rst  sfmt19937.rst  wichmann_hill.rst
examples/: AGENTS.md  README.md  arg_parsing.py  fancy.py  parallel_mc.py  parallel_random_states.py  stick_tetrahedron.py  stick_triangle.py  sticky_math.py
maintenance/: index.html
mkl_random/: AGENTS.md  __init__.py  __main__.py  _init_helper.py  _patch_numpy.py  _patch_startup.py  _version.py  mklrand.pyx  patch.py  setup.py  with_patch.py
mkl_random/interfaces/: README.md  __init__.py  _numpy_random.py  numpy_random.py
mkl_random/src/: .gitignore  generate_mklrand_c.py  mkl_distributions.cpp  mkl_distributions.h  mklrand_py_helper.h  numpy.pxd  numpy_multiiter_workaround.h  randomkit.c  randomkit.cpp  randomkit.h
mkl_random/tests/: AGENTS.md  __init__.py  test_cli.py  test_patch.py  test_random.py  test_regression.py
reference/: api.html  ars5.html  index.html  mcg31.html  mcg59.html  mrg32k3a.html  mt19937.html  mt2203.html  nondeterministic.html  philox4x32x10.html  r250.html  sfmt19937.html  wichmann_hill.html
