#!/usr/bin/env python
# Copyright (c) 2017-2025, Intel Corporation
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
#
#     * Redistributions of source code must retain the above copyright notice,
#       this list of conditions and the following disclaimer.
#     * Redistributions in binary form must reproduce the above copyright
#       notice, this list of conditions and the following disclaimer in the
#       documentation and/or other materials provided with the distribution.
#     * Neither the name of Intel Corporation nor the names of its contributors
#       may be used to endorse or promote products derived from this software
#       without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
# DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE
# FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
# DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
# SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
# CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
# OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
# OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=77", "Cython", "numpy"]

[project]
authors = [
    {name = "Intel Corporation", email = "scripting@intel.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix"
]
dependencies = ["numpy >=1.26.4", "mkl"]
description = "NumPy-based Python interface to Intel (R) MKL Random Number Generation functionality"
dynamic = ["version"]
keywords=["MKL", "VSL", "true randomness", "pseudorandomness",
          "Philox", "MT-19937", "SFMT-19937", "MT-2203", "ARS-5",
          "R-250", "MCG-31"]
license = "BSD-3-Clause"
name = "mkl_random"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.9,<3.13"


[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Download = "http://github.com/IntelPython/mkl_random"
Homepage = "http://github.com/IntelPython/mkl_random"

[tool.setuptools]
include-package-data = true
packages = ["mkl_random"]

[tool.setuptools.package-data]
"mkl_random" = ["tests/*.py"]

[tool.setuptools.dynamic]
version = {attr = "mkl_random._version.__version__"}
